# unitree_multi

./: README.md
CrazyS/rotors_gazebo/: CMakeLists.txt
CrazyS/rotors_gazebo/launch/: crazyflie2_hovering_example.launch  mav_with_keyboard.launch  mav_with_waypoint_publisher.launch  spawn_mav_crazyflie.launch
CrazyS/rotors_gazebo/resource/: controller_crazyflie2.yaml  crazyflie2.yaml  example_waypoints.txt  lee_controller_crazyflie2.yaml
CrazyS/rotors_gazebo/src/nodes/: hovering.cpp
a1_controller/scripts/: robot_controller_gazebo.py
a1_controller/scripts/RobotController/: RestController.py  RobotController.py  StandController.py  TrotGaitController.py
a1_description/urdf/: a1.urdf
a1_gazebo/config/: controllers.yaml
a1_gazebo/launch/: simulation.launch
a1_joystick/: CMakeLists.txt  package.xml
a1_joystick/scripts/: ramped_joystick.py
a1_joystick/src/: converter.cpp
multi/: CMakeLists.txt  package.xml
multi/config/: unitree_a1.rviz
multi/include/APF/: APF.h
multi/include/RRTStar/: RRTStar.h
multi/launch/: multi_launch.launch
multi/src/: PotentialField.cpp  apf.cpp  apf_node.cpp  nav.cpp  nav11.cpp  obstacles_generator.cpp  path_visualizer.cpp  planner.cpp  rrt_star.cpp  rrt_star_node.cpp  world_br.cpp
sjtu-drone/: CMakeLists.txt
sjtu-drone/launch/: simple.launch
sjtu-drone/src/: pilot.cpp  plugin_drone.cpp  target.cpp
